linux/include/linux/syscalls.h

asmlinkage long sys_kkv_init(int flags);
asmlinkage long sys_kkv_destroy(int flags);
asmlinkage long sys_kkv_put(uint32_t key, void *val, size_t size, int flags);
asmlinkage long sys_kkv_get(uint32_t key, void *val, size_t size, int flags);